--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -1885,6 +1885,10 @@ body.justified-not .markdownBody li {
     }
 }
 
+* + .abstract {
+	margin-top: 1.5em;
+}
+
 /*  Auto-smallcaps the first line of the introduction (= the first `<p>` after
     an ‘abstract’ div); this avoids the need to manually specify what to
     smallcaps, and it auto-adjusts to screen/line-width, which is nicer.
@@ -3891,6 +3895,6 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
-<link rel="preload" href="/static/css/fonts.css?v=1684559404" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
-<link rel="preload" href="/static/css/default.css?v=1684620227" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/fonts.css?v=1684633201" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/default.css?v=1684633755" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1684430958" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
