--- a/template/default.html
+++ b/template/default.html
@@ -5,15 +5,13 @@
 
     <!-- SSI: CSS+JS inline for speed -->
     <!-- INLINED-HEAD-BEGIN -->
-    <!--#include virtual="/static/include/inlined-head.html" --><!-- INLINED-HEAD-END -->
-
-    <!-- SSI: fetch the title & body fonts immediately to avoid re-rendering -->
-    <!-- SSI: also inline minimal set of font CSS needed for initial screen, for speed -->
-    <!-- INLINED-FONTS-BEGIN -->
-    <!--#include virtual="/static/include/inlined-fonts.html" --><!-- INLINED-FONTS-END -->
+    <!--#include virtual="/static/include/inlined-head.html" -->
+    <!-- INLINED-HEAD-END -->
 
     <!-- SSI: Inlined asset versions -->
-    <!-- INLINED-ASSET-VERSIONS-BEGIN--><!--#include virtual="/static/include/inlined-asset-versions.html" --><!-- INLINED-ASSET-VERSIONS-END -->
+    <!-- INLINED-ASSET-VERSIONS-BEGIN-->
+    <!--#include virtual="/static/include/inlined-asset-versions.html" -->
+    <!-- INLINED-ASSET-VERSIONS-END -->
 
     $if(index)$
     <!-- Google Webmaster requires this tag, but only on the index/homepage -->
