--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,39 +1,5 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1684784914"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1684784813"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1684430958"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/style.css?v=1685837986"></noscript>
 
-    <!-- JS library with utility functions used in rest of code -->
-    <script src="/static/js/utility.js?v=1684262204" defer></script>
-    <!-- Misc JS -->
-    <script src="/static/js/misc.js?v=1684560577" defer></script>
-    <!-- JS library for spawning popups -->
-    <script src="/static/js/popups.js?v=1684546420" defer></script>
-    <script src="/static/js/popins.js?v=1684619420" defer></script>
-    <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
-    <script src="/static/js/annotations.js?v=1683822239" defer></script>
-    <script src="/static/js/content.js?v=1683607925" defer></script>
-    <script src="/static/js/extracts.js?v=1684619103" defer></script>
-    <script src="/static/js/extracts-annotations.js?v=1684619679" defer></script>
-    <script src="/static/js/extracts-content.js?v=1684546461" defer></script>
-    <script src="/static/js/extracts-options.js?v=1684304157" defer></script>
-	<!-- JS library for in-browser hyphenation -->
-	<script src="/static/js/Hyphenopoly_Loader.js?v=1650818540" defer></script>
-    <!-- JS library for typography rectification -->
-    <script src="/static/js/typography.js?v=1680851954" defer></script>
-    <!-- Various rewrites and other page modifications -->
-    <script src="/static/js/rewrite.js?v=1684645989" defer></script>
-    <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
-    <script src="/static/js/sidenotes.js?v=1684024886" defer></script>
-    <!-- JS library for client-side transclusion -->
-    <script src="/static/js/transclude.js?v=1684615407" defer></script>
-    <!-- JS library for collapsed sections -->
-    <script src="/static/js/collapse.js?v=1684620094" defer></script>
-    <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
-    <script src="/static/js/dark-mode.js?v=1684274088" defer></script>
-    <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
-    <script src="/static/js/reader-mode.js?v=1684350322" defer></script>
-    <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
-    <script src="/static/js/image-focus.js?v=1684340935" defer></script>
-    <!-- Command console -->
-    <script src="/static/js/console.js?v=1682880949" defer></script>
+	<!-- Load the rest of the JS. -->
+    <script src="/static/js/script.js?v=1685837986" defer></script>
