--- a/template/inlined-foot-template.html
+++ b/template/inlined-foot-template.html
@@ -1,39 +1,5 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/default.css">
-	<link rel="stylesheet" type="text/css" href="/static/css/links.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
-    <!-- JS library with utility functions used in rest of code -->
-    <script src="/static/js/utility.js" defer></script>
-    <!-- Misc JS -->
-    <script src="/static/js/misc.js" defer></script>
-    <!-- JS library for spawning popups -->
-    <script src="/static/js/popups.js" defer></script>
-    <script src="/static/js/popins.js" defer></script>
-    <!-- JS library for annotating hyperlinks with introduction/summary from various sources; not lazy-loaded as (almost) all pages have popups -->
-    <script src="/static/js/annotations.js" defer></script>
-    <script src="/static/js/content.js" defer></script>
-    <script src="/static/js/extracts.js" defer></script>
-    <script src="/static/js/extracts-annotations.js" defer></script>
-    <script src="/static/js/extracts-content.js" defer></script>
-    <script src="/static/js/extracts-options.js" defer></script>
-	<!-- JS library for in-browser hyphenation -->
-	<script src="/static/js/Hyphenopoly_Loader.js" defer></script>
-    <!-- JS library for typography rectification -->
-    <script src="/static/js/typography.js" defer></script>
-    <!-- Various rewrites and other page modifications -->
-    <script src="/static/js/rewrite.js" defer></script>
-    <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
-    <script src="/static/js/sidenotes.js" defer></script>
-    <!-- JS library for client-side transclusion -->
-    <script src="/static/js/transclude.js" defer></script>
-    <!-- JS library for collapsed sections -->
-    <script src="/static/js/collapse.js" defer></script>
-    <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
-    <script src="/static/js/dark-mode.js" defer></script>
-    <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
-    <script src="/static/js/reader-mode.js" defer></script>
-    <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
-    <script src="/static/js/image-focus.js" defer></script>
-    <!-- Command console -->
-    <script src="/static/js/console.js" defer></script>
+	<!-- Load the rest of the JS. -->
+    <script src="/static/js/script.js" defer></script>
